--- a/jade/inde.html
+++ b/jade/inde.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>test from dean</title>
+    <title>dean HEIHEI test from dean</title>
   </head>
   <body> 
-    <h1 id="title" class="title">this is test body</h1><a href="www.baidu.com" title="baidu" data-uid="1000">baidu</a>
+    <h2>转义</h2>
+    <p>dean </p>
+    <p>26 </p>
+    <p>180 </p>
+    <p>text</p>
+    <p><script>alert(1);</script></p>
+    <h1 id="title" class="title">this is test body<a href="www.baidu.com" title="baidu" data-uid="1000">baidu</a></h1>
     <input id="test_input" name="test" class="test">
   </body>
 </html>
